0.11.0/_sources/gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plot_types.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/d_plotting/plot_plot_types.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plot_types.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plot_types.py:


Choose an explicit plot type for a 2D IR dataset
================================================

This example compares a few explicit plotting methods available for the same
infrared dataset.

.. GENERATED FROM PYTHON SOURCE LINES 14-20

.. code-block:: default


    import os
    from pathlib import Path

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Load a 2D IR dataset and prepare a cleaner spectral window for display.

.. GENERATED FROM PYTHON SOURCE LINES 22-34

.. code-block:: default


    TEST_FILE = Path(os.environ.get("TEST_FILE", "irdata/nh4y-activation.spg"))
    dataset = scp.read(TEST_FILE)
    dataset = dataset[:, 4000.0:650.0]
    dataset.y -= dataset.y[0]
    dataset.y.ito("hour")
    dataset.y.title = "Time on stream"
    dataset[:, 1290.0:920.0] = scp.MASKED

    prefs = scp.preferences
    prefs.figure.figsize = (7, 4)








.. GENERATED FROM PYTHON SOURCE LINES 35-36

A single spectrum is naturally shown as a line plot.

.. GENERATED FROM PYTHON SOURCE LINES 36-40

.. code-block:: default


    single = dataset[0]
    _ = single.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_001.png
   :alt: plot plot types
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 41-43

For the full 2D dataset, explicit methods make the intended representation
very clear.

.. GENERATED FROM PYTHON SOURCE LINES 43-48

.. code-block:: default


    _ = dataset.plot_lines()
    _ = dataset.plot_image(colorbar=True)
    _ = dataset.plot_contour(colorbar=True)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_002.png
         :alt: plot plot types
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_003.png
         :alt: plot plot types
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_004.png
         :alt: plot plot types
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_004.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 49-50

Plot-specific options still apply in the same way.

.. GENERATED FROM PYTHON SOURCE LINES 50-58

.. code-block:: default


    _ = dataset.plot_image(
        cmap="plasma",
        xlim=(2000, 1300),
        ylim=(1, 5),
        colorbar=True,
    )




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_005.png
   :alt: plot plot types
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/sphx_glr_plot_plot_types_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-61

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 61-63

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.808 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plot_types.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_plot_types.py <plot_plot_types.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_plot_types.ipynb <plot_plot_types.ipynb>`
